# algorithms_std

./: README.md
search/bfs/: bfs.py
search/dijkstra/: dijkstra.py
sort/qsort/: CMakeLists.txt  README.md  main.cpp  qsort.py  win_aouto_build.cmd
